mid | Fixed minor Header spacing; Completed Warehouse delete functionality

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -59,10 +59,10 @@
         justify-content: center;
         align-items: center;
         padding: 4px;
-        width: 100%;
         border-radius: 20px;
         width: 100%;
         height: 36px;
+        margin: 0px 8px;
 
         @include md {
             width: 107px;
