--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -111,10 +111,13 @@
         transform-origin: right;
         width: 8%;
 
-        &--icon {
-            margin: 0px 4px;
-            padding: 6px;
+        @include lg {
+            width: 4%;
+        }
 
+        &--icon {
+            margin: 0px 16px;
+            padding: 8px 16px;
         }
     }
 }
