--- a/src/components/Warehouses/Warehouses.scss
+++ b/src/components/Warehouses/Warehouses.scss
@@ -36,14 +36,14 @@
 
         @include md {
             flex-direction: row;
-            justify-content: flex-start;
+            justify-content: start;
         }
     }
 
     &__opt {
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: start;
         width: 100%;
 
         @include md {
@@ -55,7 +55,7 @@
     &__sec {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: start;
         margin: 8px 0px;
         width: 100%;
 
@@ -74,8 +74,8 @@
     &--text {
         @include font_Body-Medium-Mobile;
         display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
+        justify-content: start;
+        align-items: start;
 
         @include md {
             width: 90%;
@@ -111,10 +111,17 @@
         transform-origin: right;
         width: 8%;
 
-        &--icon {
-            margin: 0px 4px;
-            padding: 6px;
+        @include lg {
+            width: 4%;
+        }
 
+        &--icon {
+            margin: 0px 16px;
+            padding: 8px 16px;
         }
     }
+}
+
+#footer--icon {
+    cursor: pointer;
 }
